Prevent horizontal scroll

--- a/app/css/imports/general.css
+++ b/app/css/imports/general.css
@@ -12,4 +12,5 @@ body {
   font-size: 18px;
   line-height: 1.333333;
   font-weight: 400;
+  overflow-x: hidden;
 }
